# cursor-ai

./: .cursorignore  .gitignore  CHANGELOG.md  README.md  install-super-cursor.sh
.cursor/: AGENTS.md  README.md  hooks.json  verify-super-cursor.sh  verify-system.sh
.cursor/agents/: review.md  ship.md  spike.md
.cursor/commands/: debug.md  delivery.md  disk.md  ia.md  learn.md  maintain.md  manual.md  master.md  pencil-design.md  plan.md  release.md  report.md  review.md  run.md  scaffold.md  ux.md  week.md
.cursor/config/: README.md  release.json  roles.json  workflow.json
.cursor/docs/: building-super-cursor.md  effective-collaboration.md  library-index.md  migration-catalog.md  naming.md  plan-run.md  platforms.md  quickstart.md  rules-catalog.md  scaffold.md  walkthrough.md
.cursor/hooks/: growth-init.sh  run-start.sh  run-stop.sh
.cursor/lib/: platform.sh
.cursor/rules/: core.mdc  local  workflow.mdc
.cursor/templates/: plan.md  (+6 more)
.cursor/templates/scaffold/cpp-cmake/: .gitignore  CMakeLists.txt  README.md
.cursor/templates/scaffold/cpp-cmake/.github/workflows/: ci.yml
.cursor/templates/scaffold/cpp-cmake/include/app/: greet.hpp
.cursor/templates/scaffold/cpp-cmake/scripts/: test.sh  verify.sh
.cursor/templates/scaffold/cpp-cmake/src/: greet.cpp  main.cpp
.cursor/templates/scaffold/cpp-cmake/tests/: README.md  greet_test.cpp
.cursor/templates/scaffold/python-fastapi/: .env.example  .gitignore  README.md  pyproject.toml
.cursor/templates/scaffold/python-fastapi/.github/workflows/: ci.yml
.cursor/templates/scaffold/python-fastapi/scripts/: test.sh  verify.sh
.cursor/templates/scaffold/python-fastapi/src/app/: main.py
.cursor/templates/scaffold/python-fastapi/tests/: README.md
.cursor/templates/scaffold/python-fastapi/tests/integration/: test_api.py
.cursor/templates/scaffold/python-fastapi/tests/unit/: test_health.py
.cursor/templates/scaffold/rust-axum/: .env.example  .gitignore  Cargo.toml  README.md
.cursor/templates/scaffold/rust-axum/.github/workflows/: ci.yml
.cursor/templates/scaffold/rust-axum/scripts/: test.sh  verify.sh
.cursor/templates/scaffold/rust-axum/src/: lib.rs  main.rs
.cursor/templates/scaffold/rust-axum/tests/: README.md  health_integration.rs
(+212 files in other folders)
